# json-rpc-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/simple/: CMakeLists.txt  main.cpp
include/jsonrpc/: client_interface.hpp  common.hpp  request.hpp  response.hpp  server.hpp  server_base.hpp
tests/: CMakeLists.txt  error.cpp  helper_functions.cpp  id.cpp  request.cpp  response.cpp  server_base.cpp
